ui/single/locals-cfg.stderr
error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:11:9
   |
11 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:19:9
   |
19 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:29:9
   |
29 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:37:9
   |
37 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:45:9
   |
45 |         FOO;
   |         ^^^ not found in this scope

error: duplicate lang item in crate `panic_halt` (which `$CRATE` depends on): `panic_impl`.
  |
  = note: the lang item is first defined in crate `std` (which `$CRATE` depends on)
  = note: first definition in `std` loaded from /home/henrik/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-cf0f33af3a901778.rlib
  = note: second definition in `panic_halt` loaded from $DIR/target/tests/target/debug/deps/libpanic_halt-b597cb793434f3ed.rmeta

error: duplicate lang item in crate `panic_semihosting`: `panic_impl`.
  |
  = note: the lang item is first defined in crate `panic_halt` (which `$CRATE` depends on)
  = note: first definition in `panic_halt` loaded from $DIR/target/tests/target/debug/deps/libpanic_halt-b597cb793434f3ed.rmeta
  = note: second definition in `panic_semihosting` loaded from $DIR/target/tests/target/debug/deps/libpanic_semihosting-2c8f1ababc34800c.rmeta
